# SentinelPost

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: database.py
app/db_models/: models.py
app/ml_models/: summarizer.py
app/services/: img_gen.py  news_fetcher.py  preprocessor.py  utils.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
